// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/Team renders Team 1`] = `
<div>
  <div>
    <div
      class="sc-eXEjpC hLFdzU"
    >
      <div
        class="sc-ibxdXY jEbWZG"
      >
        <div
          class="sc-iyvyFf dwBgqp"
        >
          <a
            class="sc-hwwEjo hoOrJO"
          >
            <img
              class="sc-kPVwWT gfbDty"
              data-testid="logo"
              path="test-file-stub"
            />
          </a>
          <div
            class="sc-kfGgVZ fIMaGV"
          >
            <a
              class="sc-kIPQKe cCUntY"
              aria-current="false"
            >
              Erbjudanden
            </a>
            <a
              class="sc-kIPQKe cCUntY"
              aria-current="false"
            >
              Våra case
            </a>
            <a
              class="sc-kIPQKe cCUntY"
              aria-current="false"
            >
              Metod
            </a>
            <a
              class="sc-kIPQKe cCUntY"
              aria-current="false"
            >
              Medarbetare
            </a>
            <a
              class="sc-kIPQKe cCUntY"
              aria-current="false"
            >
              Karriär
            </a>
            <a
              class="sc-kIPQKe cCUntY"
              aria-current="false"
            >
              Om
            </a>
            <div
              class="sc-esjQYD jyencr"
            />
          </div>
        </div>
        <div
          class="sc-RefOD bWgdmm"
        >
          <h1
            class="sc-iQKALj atLyL"
          >
            <span>
              Det är vi som är Iteam
            </span>
          </h1>
        </div>
      </div>
    </div>
  </div>
  <div
    class="sc-ifAKCX gBIItr"
  >
    <div
      class="sc-htpNat eTTkxF"
    >
      <div
        class="sc-bwzfXH kkDUXN"
        data-test="filter-"
        tabindex="0"
      >
        Alla
      </div>
      <div
        class="sc-bwzfXH bJTJSt"
        data-test="filter-Stockholm"
        tabindex="0"
      >
        Stockholm
      </div>
      <div
        class="sc-bwzfXH bJTJSt"
        data-test="filter-Göteborg"
        tabindex="0"
      >
        Göteborg
      </div>
    </div>
    <div
      class="sc-jWBwVP jbjxKO"
    >
      <div
        class="sc-cMljjf bBhzLW"
      >
        <div
          class="sc-ckVGcZ bZLjEW"
        >
          <a
            class="sc-kpOJdX eNhRjC"
          >
            <div
              class="sc-eTuwsz eUwsNj"
            >
              <div>
                <img
                  class="sc-dxgOiQ bXQPbj"
                  alt="Cookie M"
                  src=""
                />
              </div>
            </div>
          </a>
          <div
            class="sc-bwCtUz jLFYBo"
          >
            Cookie M
          </div>
          <div
            class="sc-hrWEMg IYhUU"
          >
            Cookie master
          </div>
          <div
            class="sc-gwVKww dWISzj"
          >
            <a
              class="sc-chPdSV hAACpH"
              href="tel:0701234567"
            >
              070-123 45 67
            </a>
          </div>
          <a
            class="sc-kAzzGY LovkB"
            href="mailto:cm@sesame.com"
          >
            cm@sesame.com
          </a>
        </div>
        <div
          class="sc-ckVGcZ bZLjEW"
        >
          <a
            class="sc-kpOJdX eNhRjC"
          >
            <div
              class="sc-eTuwsz eUwsNj"
            >
              <div>
                <img
                  class="sc-dxgOiQ bXQPbj"
                  alt="Count van Count"
                  src=""
                />
              </div>
            </div>
          </a>
          <div
            class="sc-bwCtUz jLFYBo"
          >
            Count van Count
          </div>
          <div
            class="sc-hrWEMg IYhUU"
          >
            1 ahahah
          </div>
          <div
            class="sc-gwVKww dWISzj"
          >
            <a
              class="sc-chPdSV hAACpH"
              href="tel:0707654321"
            >
              070-765 43 21
            </a>
          </div>
          <a
            class="sc-kAzzGY LovkB"
            href="mailto:count@sesame.com"
          >
            count@sesame.com
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/Team should handle changing location using keyboard 1`] = `
<div>
  <div>
    <div
      class="sc-eXEjpC hLFdzU"
    >
      <div
        class="sc-ibxdXY jEbWZG"
      >
        <div
          class="sc-iyvyFf dwBgqp"
        >
          <a
            class="sc-hwwEjo hoOrJO"
          >
            <img
              class="sc-kPVwWT gfbDty"
              data-testid="logo"
              path="test-file-stub"
            />
          </a>
          <div
            class="sc-kfGgVZ fIMaGV"
          >
            <a
              class="sc-kIPQKe cCUntY"
              aria-current="false"
            >
              Erbjudanden
            </a>
            <a
              class="sc-kIPQKe cCUntY"
              aria-current="false"
            >
              Våra case
            </a>
            <a
              class="sc-kIPQKe cCUntY"
              aria-current="false"
            >
              Metod
            </a>
            <a
              class="sc-kIPQKe cCUntY"
              aria-current="false"
            >
              Medarbetare
            </a>
            <a
              class="sc-kIPQKe cCUntY"
              aria-current="false"
            >
              Karriär
            </a>
            <a
              class="sc-kIPQKe cCUntY"
              aria-current="false"
            >
              Om
            </a>
            <div
              class="sc-esjQYD jyencr"
            />
          </div>
        </div>
        <div
          class="sc-RefOD bWgdmm"
        >
          <h1
            class="sc-iQKALj atLyL"
          >
            <span>
              Det är vi som är Iteam
            </span>
          </h1>
        </div>
      </div>
    </div>
  </div>
  <div
    class="sc-ifAKCX gBIItr"
  >
    <div
      class="sc-htpNat eTTkxF"
    >
      <div
        class="sc-bwzfXH bJTJSt"
        data-test="filter-"
        tabindex="0"
      >
        Alla
      </div>
      <div
        class="sc-bwzfXH bJTJSt"
        data-test="filter-Stockholm"
        tabindex="0"
      >
        Stockholm
      </div>
      <div
        class="sc-bwzfXH kkDUXN"
        data-test="filter-Göteborg"
        tabindex="0"
      >
        Göteborg
      </div>
    </div>
    <div
      class="sc-jWBwVP jbjxKO"
    >
      <div
        class="sc-cMljjf bBhzLW"
      >
        <div
          class="sc-ckVGcZ bZLjEW"
        >
          <a
            class="sc-kpOJdX eNhRjC"
          >
            <div
              class="sc-eTuwsz eUwsNj"
            >
              <div>
                <img
                  class="sc-dxgOiQ bXQPbj"
                  alt="Count van Count"
                  src=""
                />
              </div>
            </div>
          </a>
          <div
            class="sc-bwCtUz jLFYBo"
          >
            Count van Count
          </div>
          <div
            class="sc-hrWEMg IYhUU"
          >
            1 ahahah
          </div>
          <div
            class="sc-gwVKww dWISzj"
          >
            <a
              class="sc-chPdSV hAACpH"
              href="tel:0707654321"
            >
              070-765 43 21
            </a>
          </div>
          <a
            class="sc-kAzzGY LovkB"
            href="mailto:count@sesame.com"
          >
            count@sesame.com
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/Team should handle changing location using mouse 1`] = `
<div>
  <div>
    <div
      class="sc-eXEjpC hLFdzU"
    >
      <div
        class="sc-ibxdXY jEbWZG"
      >
        <div
          class="sc-iyvyFf dwBgqp"
        >
          <a
            class="sc-hwwEjo hoOrJO"
          >
            <img
              class="sc-kPVwWT gfbDty"
              data-testid="logo"
              path="test-file-stub"
            />
          </a>
          <div
            class="sc-kfGgVZ fIMaGV"
          >
            <a
              class="sc-kIPQKe cCUntY"
              aria-current="false"
            >
              Erbjudanden
            </a>
            <a
              class="sc-kIPQKe cCUntY"
              aria-current="false"
            >
              Våra case
            </a>
            <a
              class="sc-kIPQKe cCUntY"
              aria-current="false"
            >
              Metod
            </a>
            <a
              class="sc-kIPQKe cCUntY"
              aria-current="false"
            >
              Medarbetare
            </a>
            <a
              class="sc-kIPQKe cCUntY"
              aria-current="false"
            >
              Karriär
            </a>
            <a
              class="sc-kIPQKe cCUntY"
              aria-current="false"
            >
              Om
            </a>
            <div
              class="sc-esjQYD jyencr"
            />
          </div>
        </div>
        <div
          class="sc-RefOD bWgdmm"
        >
          <h1
            class="sc-iQKALj atLyL"
          >
            <span>
              Det är vi som är Iteam
            </span>
          </h1>
        </div>
      </div>
    </div>
  </div>
  <div
    class="sc-ifAKCX gBIItr"
  >
    <div
      class="sc-htpNat eTTkxF"
    >
      <div
        class="sc-bwzfXH bJTJSt"
        data-test="filter-"
        tabindex="0"
      >
        Alla
      </div>
      <div
        class="sc-bwzfXH kkDUXN"
        data-test="filter-Stockholm"
        tabindex="0"
      >
        Stockholm
      </div>
      <div
        class="sc-bwzfXH bJTJSt"
        data-test="filter-Göteborg"
        tabindex="0"
      >
        Göteborg
      </div>
    </div>
    <div
      class="sc-jWBwVP jbjxKO"
    >
      <div
        class="sc-cMljjf bBhzLW"
      >
        <div
          class="sc-ckVGcZ bZLjEW"
        >
          <a
            class="sc-kpOJdX eNhRjC"
          >
            <div
              class="sc-eTuwsz eUwsNj"
            >
              <div>
                <img
                  class="sc-dxgOiQ bXQPbj"
                  alt="Cookie M"
                  src=""
                />
              </div>
            </div>
          </a>
          <div
            class="sc-bwCtUz jLFYBo"
          >
            Cookie M
          </div>
          <div
            class="sc-hrWEMg IYhUU"
          >
            Cookie master
          </div>
          <div
            class="sc-gwVKww dWISzj"
          >
            <a
              class="sc-chPdSV hAACpH"
              href="tel:0701234567"
            >
              070-123 45 67
            </a>
          </div>
          <a
            class="sc-kAzzGY LovkB"
            href="mailto:cm@sesame.com"
          >
            cm@sesame.com
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/Team should not change using keyboard if not enter or space key 1`] = `
<div>
  <div>
    <div
      class="sc-eXEjpC hLFdzU"
    >
      <div
        class="sc-ibxdXY jEbWZG"
      >
        <div
          class="sc-iyvyFf dwBgqp"
        >
          <a
            class="sc-hwwEjo hoOrJO"
          >
            <img
              class="sc-kPVwWT gfbDty"
              data-testid="logo"
              path="test-file-stub"
            />
          </a>
          <div
            class="sc-kfGgVZ fIMaGV"
          >
            <a
              class="sc-kIPQKe cCUntY"
              aria-current="false"
            >
              Erbjudanden
            </a>
            <a
              class="sc-kIPQKe cCUntY"
              aria-current="false"
            >
              Våra case
            </a>
            <a
              class="sc-kIPQKe cCUntY"
              aria-current="false"
            >
              Metod
            </a>
            <a
              class="sc-kIPQKe cCUntY"
              aria-current="false"
            >
              Medarbetare
            </a>
            <a
              class="sc-kIPQKe cCUntY"
              aria-current="false"
            >
              Karriär
            </a>
            <a
              class="sc-kIPQKe cCUntY"
              aria-current="false"
            >
              Om
            </a>
            <div
              class="sc-esjQYD jyencr"
            />
          </div>
        </div>
        <div
          class="sc-RefOD bWgdmm"
        >
          <h1
            class="sc-iQKALj atLyL"
          >
            <span>
              Det är vi som är Iteam
            </span>
          </h1>
        </div>
      </div>
    </div>
  </div>
  <div
    class="sc-ifAKCX gBIItr"
  >
    <div
      class="sc-htpNat eTTkxF"
    >
      <div
        class="sc-bwzfXH kkDUXN"
        data-test="filter-"
        tabindex="0"
      >
        Alla
      </div>
      <div
        class="sc-bwzfXH bJTJSt"
        data-test="filter-Stockholm"
        tabindex="0"
      >
        Stockholm
      </div>
      <div
        class="sc-bwzfXH bJTJSt"
        data-test="filter-Göteborg"
        tabindex="0"
      >
        Göteborg
      </div>
    </div>
    <div
      class="sc-jWBwVP jbjxKO"
    >
      <div
        class="sc-cMljjf bBhzLW"
      >
        <div
          class="sc-ckVGcZ bZLjEW"
        >
          <a
            class="sc-kpOJdX eNhRjC"
          >
            <div
              class="sc-eTuwsz eUwsNj"
            >
              <div>
                <img
                  class="sc-dxgOiQ bXQPbj"
                  alt="Cookie M"
                  src=""
                />
              </div>
            </div>
          </a>
          <div
            class="sc-bwCtUz jLFYBo"
          >
            Cookie M
          </div>
          <div
            class="sc-hrWEMg IYhUU"
          >
            Cookie master
          </div>
          <div
            class="sc-gwVKww dWISzj"
          >
            <a
              class="sc-chPdSV hAACpH"
              href="tel:0701234567"
            >
              070-123 45 67
            </a>
          </div>
          <a
            class="sc-kAzzGY LovkB"
            href="mailto:cm@sesame.com"
          >
            cm@sesame.com
          </a>
        </div>
        <div
          class="sc-ckVGcZ bZLjEW"
        >
          <a
            class="sc-kpOJdX eNhRjC"
          >
            <div
              class="sc-eTuwsz eUwsNj"
            >
              <div>
                <img
                  class="sc-dxgOiQ bXQPbj"
                  alt="Count van Count"
                  src=""
                />
              </div>
            </div>
          </a>
          <div
            class="sc-bwCtUz jLFYBo"
          >
            Count van Count
          </div>
          <div
            class="sc-hrWEMg IYhUU"
          >
            1 ahahah
          </div>
          <div
            class="sc-gwVKww dWISzj"
          >
            <a
              class="sc-chPdSV hAACpH"
              href="tel:0707654321"
            >
              070-765 43 21
            </a>
          </div>
          <a
            class="sc-kAzzGY LovkB"
            href="mailto:count@sesame.com"
          >
            count@sesame.com
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;
